--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,26 +1,7 @@
-<div class="container-fluid">
-  <div class="col-6">
-    <table class="table">
-      <thead>
-        <tr>
-          <th class="h4">Course's Name</th>
-          <th class="h4">Professor's Name</th>
-          <th class="h4">Credits</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let c of courses">
-          <td>
-            <dd>{{ c.name }}</dd>
-          </td>
-          <td>
-            <dd>{{ c.professor }}</dd>
-          </td>
-          <td>
-            <dd>{{ c.credits }}</dd>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<nav class="navbar navbar-light">
+  <a class="navbar-brand" href="#">
+      Series
+  </a>
+</nav>
+<app-course-list></app-course-list>
+```
